Added text field to write text

--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -447,6 +447,7 @@
                                     </VBox>
                                  </children>
                               </HBox>
+                              <TextField fx:id="displayTextField" onAction="#selectDisplayText" promptText="Insert your text here..." />
                               <Label text="Insert">
                                  <font>
                                     <Font name="System Bold" size="12.0" />
