--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -76,54 +76,74 @@
                               <Tooltip text="Cursor" />
                            </tooltip>
                         </ToggleButton>
-                        <VBox alignment="BOTTOM_CENTER" spacing="10.0">
+                        <VBox alignment="BOTTOM_CENTER" spacing="20.0">
                            <children>
-                              <ScrollPane fitToWidth="true" focusTraversable="false">
-                                 <content>
-                                    <GridPane alignment="CENTER">
-                                      <columnConstraints>
-                                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                                          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                                      </columnConstraints>
-                                      <rowConstraints>
-                                        <RowConstraints vgrow="SOMETIMES" />
-                                          <RowConstraints vgrow="SOMETIMES" />
-                                          <RowConstraints vgrow="SOMETIMES" />
-                                      </rowConstraints>
-                                       <children>
-                                          <ToggleButton fx:id="lineButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes">
-                                             <tooltip>
-                                                <Tooltip text="Line" />
-                                             </tooltip></ToggleButton>
-                                          <ToggleButton fx:id="rectangleButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes" GridPane.columnIndex="1">
-                                             <tooltip>
-                                                <Tooltip text="Rectangle" />
-                                             </tooltip></ToggleButton>
-                                          <ToggleButton fx:id="ellipseButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes" GridPane.rowIndex="1">
-                                             <tooltip>
-                                                <Tooltip text="Ellipse" />
-                                             </tooltip></ToggleButton>
-                                          <ToggleButton fx:id="polygonButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" toggleGroup="$shapes" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                             <tooltip>
-                                                <Tooltip text="Polygon" />
-                                             </tooltip>
-                                          </ToggleButton>
-                                       </children>
-                                       <padding>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </padding>
-                                    </GridPane>
-                                 </content>
-                              </ScrollPane>
+                              <GridPane alignment="CENTER">
+                                <columnConstraints>
+                                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <ToggleButton fx:id="lineButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes">
+                                       <tooltip>
+                                          <Tooltip text="Line" />
+                                       </tooltip>
+                                    </ToggleButton>
+                                    <ToggleButton fx:id="rectangleButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes" GridPane.columnIndex="1">
+                                       <tooltip>
+                                          <Tooltip text="Rectangle" />
+                                       </tooltip>
+                                    </ToggleButton>
+                                    <ToggleButton fx:id="ellipseButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes" GridPane.rowIndex="1">
+                                       <tooltip>
+                                          <Tooltip text="Ellipse" />
+                                       </tooltip>
+                                    </ToggleButton>
+                                    <ToggleButton fx:id="polygonButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" toggleGroup="$shapes" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                       <tooltip>
+                                          <Tooltip text="Polygon" />
+                                       </tooltip>
+                                    </ToggleButton>
+                                 </children>
+                              </GridPane>
                               <Label text="Shapes">
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font></Label>
                            </children>
                         </VBox>
+                        <Separator orientation="VERTICAL" />
+                        <VBox alignment="BOTTOM_CENTER" spacing="20.0">
+                           <children>
+                              <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
+                                 <children>
+                                    <ToggleButton fx:id="textButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" toggleGroup="$shapes">
+                                       <tooltip>
+                                          <Tooltip text="Text" />
+                                       </tooltip>
+                                    </ToggleButton>
+                                    <VBox alignment="CENTER" spacing="10.0">
+                                       <children>
+                                          <ComboBox fx:id="fontsComboBox" onAction="#selectFont" prefWidth="100.0" promptText="Font" />
+                                          <ComboBox fx:id="sizeComboBox" onAction="#selectSize" prefWidth="100.0" promptText="Size" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                              <TextField fx:id="displayTextField" onAction="#selectDisplayText" promptText="Insert your text here..." />
+                              <Label text="Insert">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
                         <Separator layoutX="677.0" layoutY="20.0" orientation="VERTICAL" />
-                        <VBox alignment="BOTTOM_CENTER" spacing="10.0">
+                        <VBox alignment="BOTTOM_CENTER" spacing="20.0">
                            <children>
                               <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
                                  <children>
@@ -429,38 +449,15 @@
                            </HBox.margin>
                         </VBox>
                         <ToggleButton fx:id="noFillButton" mnemonicParsing="false" onAction="#selectNoFill" selected="true" styleClass="transparent-button" toggleGroup="$fillColor" />
-                        <Separator orientation="VERTICAL" />
-                        <VBox alignment="BOTTOM_CENTER" spacing="10.0">
-                           <children>
-                              <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
-                                 <children>
-                                    <ToggleButton fx:id="textButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" toggleGroup="$shapes">
-                                       <tooltip>
-                                          <Tooltip text="Polygon" />
-                                       </tooltip>
-                                    </ToggleButton>
-                                    <VBox alignment="CENTER" spacing="10.0">
-                                       <children>
-                                          <ComboBox fx:id="fontsComboBox" onAction="#selectFont" prefWidth="100.0" promptText="Font" />
-                                          <ComboBox fx:id="sizeComboBox" onAction="#selectSize" prefWidth="100.0" promptText="Size" />
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                              <TextField fx:id="displayTextField" onAction="#selectDisplayText" promptText="Insert your text here..." />
-                              <Label text="Insert">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
                         <Separator layoutX="694.0" layoutY="20.0" orientation="VERTICAL" />
-                        <VBox alignment="BOTTOM_CENTER" layoutX="319.0" layoutY="20.0" spacing="10.0">
+                        <VBox alignment="BOTTOM_CENTER" layoutX="319.0" layoutY="20.0" spacing="20.0">
                            <children>
                               <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
                                  <children>
-                                    <ToggleButton fx:id="gridButton" mnemonicParsing="false" onAction="#toggleGrid" prefHeight="50.0" prefWidth="50.0" />
+                                    <ToggleButton fx:id="gridButton" mnemonicParsing="false" onAction="#toggleGrid" prefHeight="50.0" prefWidth="50.0">
+                                       <tooltip>
+                                          <Tooltip text="Toggle Grid" />
+                                       </tooltip></ToggleButton>
                                     <Slider fx:id="gridSizeSlider" majorTickUnit="10.0" max="50.0" min="10.0" minorTickCount="0" orientation="VERTICAL" prefHeight="100.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0">
                                        <padding>
                                           <Insets bottom="5.0" right="20.0" top="5.0" />
@@ -491,7 +488,7 @@
                         </VBox>
                      </children>
                      <padding>
-                        <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
+                        <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
                      </padding>
                   </HBox>
                </children>
@@ -529,7 +526,7 @@
             </ScrollPane>
          </center>
          <right>
-            <VBox fx:id="propertiesPanel" managed="false" spacing="20.0" visible="false" BorderPane.alignment="CENTER">
+            <VBox fx:id="sidePanel" managed="false" spacing="10.0" visible="false" BorderPane.alignment="CENTER">
                <children>
                   <TitledPane fx:id="borderPanel" animated="false" expanded="false" text="Border">
                      <content>
@@ -833,17 +830,17 @@
                         </VBox>
                      </content>
                   </TitledPane>
-                  <TitledPane fx:id="positionPanel" animated="false" expanded="false" layoutX="20.0" layoutY="76.0" text="Position">
+                  <TitledPane fx:id="propertiesPanel" animated="false" expanded="false" layoutX="20.0" layoutY="76.0" text="Properties">
                      <content>
                         <VBox prefHeight="200.0" prefWidth="100.0" spacing="20.0">
                            <children>
-                              <VBox alignment="TOP_CENTER" spacing="10.0">
+                              <VBox fx:id="shapesPanel" alignment="TOP_CENTER" spacing="10.0">
                                  <children>
                                     <Label text="Dimensions" />
                                     <GridPane>
                                       <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="50.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="50.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="35.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="65.0" />
                                       </columnConstraints>
                                       <rowConstraints>
                                         <RowConstraints vgrow="SOMETIMES" />
@@ -855,8 +852,8 @@
                                     </GridPane>
                                     <GridPane layoutX="10.0" layoutY="38.0">
                                        <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="50.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="50.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="35.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="65.0" />
                                        </columnConstraints>
                                        <rowConstraints>
                                           <RowConstraints vgrow="SOMETIMES" />
@@ -864,6 +861,40 @@
                                        <children>
                                           <Label text="Height" />
                                           <TextField fx:id="heightField" onAction="#resizeHeight" GridPane.columnIndex="1" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                                 <padding>
+                                    <Insets left="5.0" right="5.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox fx:id="textPanel" alignment="TOP_CENTER" spacing="10.0">
+                                 <children>
+                                    <Label text="Font &amp; Size" />
+                                    <GridPane>
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="35.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="65.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Label text="Font" />
+                                          <ComboBox fx:id="fontsComboBoxSide" onAction="#changeFont" prefWidth="100.0" promptText="Font" GridPane.columnIndex="1" />
+                                       </children>
+                                    </GridPane>
+                                    <GridPane layoutX="10.0" layoutY="38.0">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="35.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="65.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Label text="Size" />
+                                          <ComboBox fx:id="sizeComboBoxSide" onAction="#changeSize" prefWidth="100.0" promptText="Size" GridPane.columnIndex="1" />
                                        </children>
                                     </GridPane>
                                  </children>
