--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -28,7 +28,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="rootPane" prefHeight="720.0" prefWidth="1280.0" stylesheets="@arsnova.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sadprojectwork.PaintController">
+<AnchorPane id="AnchorPane" fx:id="rootPane" prefHeight="720.0" prefWidth="1280.0" stylesheets="@arsnova.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sadprojectwork.PaintController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -136,6 +136,43 @@
                               </HBox>
                               <TextField fx:id="displayTextField" onAction="#selectDisplayText" promptText="Insert your text here..." />
                               <Label text="Text">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <Separator layoutX="694.0" layoutY="20.0" orientation="VERTICAL" />
+                        <VBox alignment="BOTTOM_CENTER" layoutX="319.0" layoutY="20.0" spacing="20.0">
+                           <children>
+                              <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
+                                 <children>
+                                    <ToggleButton fx:id="gridButton" mnemonicParsing="false" onAction="#toggleGrid" prefHeight="50.0" prefWidth="50.0">
+                                       <tooltip>
+                                          <Tooltip text="Toggle Grid" />
+                                       </tooltip></ToggleButton>
+                                    <Slider fx:id="gridSizeSlider" majorTickUnit="10.0" max="50.0" min="10.0" minorTickCount="0" orientation="VERTICAL" prefHeight="100.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0">
+                                       <padding>
+                                          <Insets bottom="5.0" right="20.0" top="5.0" />
+                                       </padding>
+                                    </Slider>
+                                    <VBox alignment="CENTER" spacing="10.0">
+                                       <children>
+                                          <Button fx:id="zoomInButton" mnemonicParsing="false" onAction="#zoomIn" prefHeight="30.0" prefWidth="30.0">
+                                             <tooltip>
+                                                <Tooltip text="Zoom In" />
+                                             </tooltip>
+                                          </Button>
+                                          <Button fx:id="zoomOutButton" mnemonicParsing="false" onAction="#zoomOut" prefHeight="30.0" prefWidth="30.0">
+                                             <tooltip>
+                                                <Tooltip text="Zoom Out" />
+                                             </tooltip>
+                                          </Button>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                              <Label text="Navigation">
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font>
@@ -439,7 +476,7 @@
                                           <Insets />
                                        </opaqueInsets>
                                     </VBox>
-                                    <Separator orientation="VERTICAL" />
+                                    <Separator fx:id="paletteSeparator" orientation="VERTICAL" />
                                     <VBox fx:id="defaultFill" alignment="CENTER" prefHeight="100.0" spacing="10.0">
                                        <children>
                                           <Label text="Default Fill" />
@@ -745,43 +782,6 @@
                         </VBox>
                         <ToggleButton fx:id="noFillButton" mnemonicParsing="false" onAction="#selectNoFill" selected="true" styleClass="transparent-button" toggleGroup="$fillColor" />
                         <ToggleButton fx:id="noFillButtonPanel" managed="false" mnemonicParsing="false" onAction="#changeToNoFill" selected="true" styleClass="transparent-button" toggleGroup="$fillColorPanel" visible="false" />
-                        <Separator layoutX="694.0" layoutY="20.0" orientation="VERTICAL" />
-                        <VBox alignment="BOTTOM_CENTER" layoutX="319.0" layoutY="20.0" spacing="20.0">
-                           <children>
-                              <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
-                                 <children>
-                                    <ToggleButton fx:id="gridButton" mnemonicParsing="false" onAction="#toggleGrid" prefHeight="50.0" prefWidth="50.0">
-                                       <tooltip>
-                                          <Tooltip text="Toggle Grid" />
-                                       </tooltip></ToggleButton>
-                                    <Slider fx:id="gridSizeSlider" majorTickUnit="10.0" max="50.0" min="10.0" minorTickCount="0" orientation="VERTICAL" prefHeight="100.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0">
-                                       <padding>
-                                          <Insets bottom="5.0" right="20.0" top="5.0" />
-                                       </padding>
-                                    </Slider>
-                                    <VBox alignment="CENTER" spacing="10.0">
-                                       <children>
-                                          <Button fx:id="zoomInButton" mnemonicParsing="false" onAction="#zoomIn" prefHeight="30.0" prefWidth="30.0">
-                                             <tooltip>
-                                                <Tooltip text="Zoom In" />
-                                             </tooltip>
-                                          </Button>
-                                          <Button fx:id="zoomOutButton" mnemonicParsing="false" onAction="#zoomOut" prefHeight="30.0" prefWidth="30.0">
-                                             <tooltip>
-                                                <Tooltip text="Zoom Out" />
-                                             </tooltip>
-                                          </Button>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                              <Label text="Navigation">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
