--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
@@ -829,13 +830,16 @@
             </ScrollPane>
          </center>
          <right>
-            <VBox fx:id="sidePanel" alignment="TOP_CENTER" managed="false" maxWidth="200.0" spacing="20.0" visible="false" BorderPane.alignment="TOP_LEFT">
+            <VBox fx:id="sidePanel" alignment="TOP_CENTER" managed="false" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" spacing="10.0" visible="false" BorderPane.alignment="TOP_LEFT">
                <children>
                   <Separator prefWidth="200.0" />
                   <Label text="Properties">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <padding>
+                        <Insets bottom="10.0" />
+                     </padding>
                   </Label>
                   <VBox fx:id="shapesPanel" alignment="TOP_CENTER" spacing="10.0">
                      <children>
@@ -865,6 +869,11 @@
                               <TextField fx:id="heightField" onAction="#resizeHeight" GridPane.columnIndex="1" />
                            </children>
                         </GridPane>
+                        <CheckBox fx:id="keepProportions" maxWidth="160.0" minWidth="160.0" mnemonicParsing="false" prefWidth="160.0" text="Lock Aspect Ratio">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </CheckBox>
                      </children>
                      <padding>
                         <Insets left="20.0" right="20.0" />
@@ -903,6 +912,11 @@
                         <Insets left="20.0" right="20.0" />
                      </padding>
                   </VBox>
+                  <Separator prefWidth="200.0">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
+                     </VBox.margin>
+                  </Separator>
                   <VBox alignment="TOP_CENTER" spacing="10.0">
                      <children>
                         <Label text="Rotation" />
