--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -817,16 +817,8 @@
                            </accelerator></MenuItem>
                         <MenuItem fx:id="frontMenuItem" disable="true" mnemonicParsing="false" onAction="#bringToFront" text="Bring to the front" />
                         <MenuItem fx:id="backMenuItem" disable="true" mnemonicParsing="false" onAction="#bringToBack" text="Bring to the back" />
-                        <MenuItem fx:id="mirrorHorMenuItem" disable="true" mnemonicParsing="false" onAction="#mirrorHorizontally" text="Mirror horizontally">
-                           <accelerator>
-                              <KeyCodeCombination alt="UP" code="BACK_SPACE" control="UP" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator>
-                        </MenuItem>
-                        <MenuItem fx:id="mirrorVerMenuItem" disable="true" mnemonicParsing="false" onAction="#mirrorVertically" text="Mirror vertically">
-                           <accelerator>
-                              <KeyCodeCombination alt="UP" code="BACK_SPACE" control="UP" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator>
-                        </MenuItem>
+                        <MenuItem fx:id="mirrorHorMenuItem" disable="true" mnemonicParsing="false" onAction="#mirrorHorizontally" text="Mirror horizontally" />
+                        <MenuItem fx:id="mirrorVerMenuItem" disable="true" mnemonicParsing="false" onAction="#mirrorVertically" text="Mirror vertically" />
                         <MenuItem fx:id="groupMenuItem" disable="true" mnemonicParsing="false" onAction="#groupSelected" text="Group" />
                         <MenuItem fx:id="ungroupMenuItem" disable="true" mnemonicParsing="false" onAction="#ungroupSelected" text="Ungroup" />
                     </items>
