--- a/Group2_SAD/src/main/resources/ui/arsnova.css
+++ b/Group2_SAD/src/main/resources/ui/arsnova.css
@@ -3,6 +3,15 @@
     -fx-background-color: #fefefe;
 }
 
+.shape-button, .grid-button {
+    
+}
+
+.zoom-button {
+    -fx-border-radius: 50%;
+    -fx-background-radius: 50%;
+}
+
 .color-button {
     -fx-min-width: 15px;
     -fx-max-width: 15px;
