--- a/Group2_SAD/src/main/resources/ui/arsnova.fxml
+++ b/Group2_SAD/src/main/resources/ui/arsnova.fxml
@@ -79,7 +79,7 @@
                         </ToggleButton>
                         <VBox alignment="BOTTOM_CENTER" spacing="20.0">
                            <children>
-                              <GridPane alignment="CENTER">
+                              <GridPane alignment="CENTER" hgap="5.0" vgap="5.0">
                                 <columnConstraints>
                                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
                                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
@@ -89,22 +89,22 @@
                                     <RowConstraints vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <ToggleButton fx:id="lineButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes">
+                                    <ToggleButton fx:id="lineButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="shape-button" textAlignment="CENTER" toggleGroup="$shapes">
                                        <tooltip>
                                           <Tooltip text="Line" />
                                        </tooltip>
                                     </ToggleButton>
-                                    <ToggleButton fx:id="rectangleButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes" GridPane.columnIndex="1">
+                                    <ToggleButton fx:id="rectangleButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="shape-button" textAlignment="CENTER" toggleGroup="$shapes" GridPane.columnIndex="1">
                                        <tooltip>
                                           <Tooltip text="Rectangle" />
                                        </tooltip>
                                     </ToggleButton>
-                                    <ToggleButton fx:id="ellipseButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" toggleGroup="$shapes" GridPane.rowIndex="1">
+                                    <ToggleButton fx:id="ellipseButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="shape-button" textAlignment="CENTER" toggleGroup="$shapes" GridPane.rowIndex="1">
                                        <tooltip>
                                           <Tooltip text="Ellipse" />
                                        </tooltip>
                                     </ToggleButton>
-                                    <ToggleButton fx:id="polygonButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" toggleGroup="$shapes" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                    <ToggleButton fx:id="polygonButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="shape-button" toggleGroup="$shapes" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                        <tooltip>
                                           <Tooltip text="Polygon" />
                                        </tooltip>
@@ -122,7 +122,7 @@
                            <children>
                               <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
                                  <children>
-                                    <ToggleButton fx:id="textButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" toggleGroup="$shapes">
+                                    <ToggleButton fx:id="textButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="shape-button" toggleGroup="$shapes">
                                        <tooltip>
                                           <Tooltip text="Text" />
                                        </tooltip>
@@ -148,7 +148,7 @@
                            <children>
                               <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
                                  <children>
-                                    <ToggleButton fx:id="gridButton" mnemonicParsing="false" onAction="#toggleGrid" prefHeight="50.0" prefWidth="50.0">
+                                    <ToggleButton fx:id="gridButton" mnemonicParsing="false" onAction="#toggleGrid" prefHeight="50.0" prefWidth="50.0" styleClass="grid-button">
                                        <tooltip>
                                           <Tooltip text="Toggle Grid" />
                                        </tooltip></ToggleButton>
@@ -159,12 +159,12 @@
                                     </Slider>
                                     <VBox alignment="CENTER" spacing="10.0">
                                        <children>
-                                          <Button fx:id="zoomInButton" mnemonicParsing="false" onAction="#zoomIn" prefHeight="30.0" prefWidth="30.0">
+                                          <Button fx:id="zoomInButton" mnemonicParsing="false" onAction="#zoomIn" prefHeight="30.0" prefWidth="30.0" styleClass="zoom-button">
                                              <tooltip>
                                                 <Tooltip text="Zoom In" />
                                              </tooltip>
                                           </Button>
-                                          <Button fx:id="zoomOutButton" mnemonicParsing="false" onAction="#zoomOut" prefHeight="30.0" prefWidth="30.0">
+                                          <Button fx:id="zoomOutButton" mnemonicParsing="false" onAction="#zoomOut" prefHeight="30.0" prefWidth="30.0" styleClass="zoom-button">
                                              <tooltip>
                                                 <Tooltip text="Zoom Out" />
                                              </tooltip>
